--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -21,11 +21,17 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
-    <string name="app_title">مشغل التطبيق البسيط - أبحث عن تطبيقاتك بسرعة</string>
+    <string name="app_title">Simple App Launcher - Launch apps easily &amp; quickly</string>
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">حامل بسيط لتشغيل التطبيقات المفضلة لديك.</string>
+    <string name="app_short_description">A simple holder for favourite apps for quick &amp; easy app launcher icon management</string>
     <string name="app_long_description">
-        يمكنك بسهولة إضافة أي مشغل تطبيق ، بحيث لا تضطر مرة أخرى إلى المرور من خلال تطبيقات عديمة الفائدة للبحث عن التطبيق الذي تحتاجه. يمكنك أيضاً إعادة تسمية المشغلات كما تشاء. إنه ليس مشغلاً حقيقياً يحل محل شاشتك الرئيسية ، بل مجرد حامل لتطبيقاتك المفضلة.
+        This is not a real launcher, just a wrapper for your favorite app icons for quick launching. You can easily add any app launcher, so you won\'t ever again have to swipe through useless apps to find the one you need. You can also rename the launchers as you wish.
+
+        There is an option to close the app itself at launching a different one for easy navigation.
+
+        We can not uninstall unwanted system apps, you can just remove their icons and ignore them.
+
+        It comes with material design and dark theme by default, provides great user experience for easy usage. The lack of internet access gives you more privacy, security and stability than other apps.
 
         لا يحتوي على إعلانات أو أذونات غير ضرورية. فهو مفتوح المصدر بالكامل ، ويوفر ألواناً قابلة للتخصيص.
 
