--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -21,11 +21,17 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
-    <string name="app_title">Απλός Εκκινητής Εφαρμογών - Άμεση εύρεση εφαρμογών</string>
+    <string name="app_title">Simple App Launcher - Launch apps easily &amp; quickly</string>
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Μία απλή αποθήκη για τους αγαπημένους σου Εκκινητές</string>
+    <string name="app_short_description">A simple holder for favourite apps for quick &amp; easy app launcher icon management</string>
     <string name="app_long_description">
-        Μπορείτε εύκολα να προσθέσετε οποιαδήποτε εφαρμογή Εκκίνησης, οπότε δεν θα χρειαστεί ξαναψάξετε μέσα από άσχετες εφαρμογές για να βρείτε αυτήν που χρειάζεστε. Μπορείτε επίσης να μετονομάσετε τους Εκκινητές όπως επιθυμείτε. Δεν είναι ένα πραγματικό πρόγραμμα εκκίνησης που αντικαθιστά την αρχική σας οθόνη, απλά ένα μέρος για τις αγαπημένες σας εφαρμογές. 
+        This is not a real launcher, just a wrapper for your favorite app icons for quick launching. You can easily add any app launcher, so you won\'t ever again have to swipe through useless apps to find the one you need. You can also rename the launchers as you wish.
+
+        There is an option to close the app itself at launching a different one for easy navigation.
+
+        We can not uninstall unwanted system apps, you can just remove their icons and ignore them.
+
+        It comes with material design and dark theme by default, provides great user experience for easy usage. The lack of internet access gives you more privacy, security and stability than other apps.
 
         Δεν περιέχει διαφημίσεις ούτε ζητά περιττά δικαιώματα. Είναι εντελώς ανοιχτού κώδικα. Επιτρέπει προσαρμοσμένα χρώματα.
 
