--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -21,21 +21,21 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
-    <string name="app_title">Simple App Launcher - Launch apps easily &amp; quickly</string>
+    <string name="app_title">Απλός Εκκινητής - Εύκολη &amp; γρήγορη εκκίνηση εφαρμογών</string>
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">A simple holder for favourite apps for quick &amp; easy app launcher icon management</string>
+    <string name="app_short_description">Μια απλή θήκη για αγαπημένες εφαρμογές για γρήγορη &amp; εύκολη διαχείριση</string>
     <string name="app_long_description">
-        This is not a real launcher, just a wrapper for your favorite app icons for quick launching. You can easily add any app launcher, so you won\'t ever again have to swipe through useless apps to find the one you need. You can also rename the launchers as you wish.
+        Δεν πρόκειται για πραγματικό εκκινητή, αλλά απλώς για ένα πρόγραμμα συγκέντρωσης για τα αγαπημένα σας εικονίδια εφαρμογών για γρήγορη εκκίνηση. Μπορείτε να προσθέσετε εύκολα οποιαδήποτε εφαρμογή, έτσι ώστε να μην χρειαστεί να σαρώσετε ξανά άχρηστες εφαρμογές για να βρείτε αυτήν που χρειάζεστε. Μπορείτε επίσης να μετονομάσετε τους εκκινητές όπως επιθυμείτε.
 
-        There is an option to close the app itself at launching a different one for easy navigation.
+        Υπάρχει μια επιλογή για να κλείσετε την ίδια την εφαρμογή κατά την εκκίνηση μιας άλλης για εύκολη περιήγηση.
 
-        We can not uninstall unwanted system apps, you can just remove their icons and ignore them.
+        Δεν είναι δυνατή η κατάργηση της εγκατάστασης ανεπιθύμητων εφαρμογών συστήματος. Μπορείτε απλώς να καταργήσετε τα εικονίδια τους και να τα αγνοήσετε.
 
-        It comes with material design and dark theme by default, provides great user experience for easy usage. The lack of internet access gives you more privacy, security and stability than other apps.
+        Διατίθεται με σχεδίαση υλικού και σκούρο θέμα από προεπιλογή, παρέχει εξαιρετική εμπειρία χρήστη για εύκολη χρήση. Η έλλειψη πρόσβασης στο διαδίκτυο σάς παρέχει περισσότερο απόρρητο, ασφάλεια και σταθερότητα από ό,τι άλλες εφαρμογές.
 
         Δεν περιέχει διαφημίσεις ούτε ζητά περιττά δικαιώματα. Είναι εντελώς ανοιχτού κώδικα. Επιτρέπει προσαρμοσμένα χρώματα.
 
-        <b>Check out the full suite of Simple Tools here:</b>
+        <b>Δείτε την πλήρη σειρά των Απλών Εργαλείων εδώ:</b>
         https://www.simplemobiletools.com
 
         <b>Facebook:</b>
