--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -21,7 +21,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
-    <string name="app_title">Απλός Εκκινητής - Εύκολη &amp; γρήγορη εκκίνηση εφαρμογών</string>
+    <string name="app_title">Simple App Launcher - Launch apps easily &amp; quickly</string>
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Μια απλή θήκη για αγαπημένες εφαρμογές για γρήγορη &amp; εύκολη διαχείριση</string>
     <string name="app_long_description">
