--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -25,9 +25,9 @@
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Een eenvoudige launcher voor je favoriete apps.</string>
     <string name="app_long_description">
-        Dit is geen volwaardige launcher, maar een overzicht voor je favoriete apps. Je kunt al je belangrijke apps toevoegen aan het overzicht, zodat je nooit meer hoeft te bladeren door de héle lijst in je launcher. Je kunt de apps ook hernoemen naar een duidelijkere naam.
+        Dit is géén volwaardige launcher (met thuisscherm en widgets), maar een overzicht voor je favoriete apps. Je kunt al je belangrijke apps toevoegen aan het overzicht, zodat je nooit meer hoeft te bladeren door de héle appslijst. Je kunt de apps ook een duidelijkere naam geven.
 
-        Na het starten van een app vanuit het overzicht kan deze app zichzelf indien gewenst weer sluiten.
+        Na het starten van een app vanuit het overzicht kan deze launcher zichzelf indien gewenst weer sluiten.
 
         Sommige ongewenste systeemapps kunnen niet worden gedeïnstalleerd, maar ze kunnen wel gemakkelijker worden genegeerd middels het gebruik van deze launcher.
 
