--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -7,21 +7,21 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
-    <string name="app_title">Simple App Launcher - Launch apps easily &amp; quickly</string>
+    <string name="app_title">Simple App Launcher - Gestor de aplicações Simple</string>
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">A simple holder for favourite apps for quick &amp; easy app launcher icon management</string>
+    <string name="app_short_description">Um local para guardar as suas aplicações preferidas</string>
     <string name="app_long_description">
-        This is not a real launcher, just a wrapper for your favorite app icons for quick launching. You can easily add any app launcher, so you won\'t ever again have to swipe through useless apps to find the one you need. You can also rename the launchers as you wish.
+        Este não é um launcher no seu termo concreto mas sim uma aplicação paar colocar os ícones das suas aplicações preferidas. Aqui pode adicionar qualquer ícone para que não tenha que percorrer os menus na sua plenitude. também permite mudar o nome dos lançadores.
 
-        There is an option to close the app itself at launching a different one for easy navigation.
+        Existe uma opção para fechar esta aplicação assim que alguma outra seja aberta a partir desta.
 
-        We can not uninstall unwanted system apps, you can just remove their icons and ignore them.
+        Com esta aplicação não é possível remover aplicações do sistema mas pode ocultar o seu ícone para nunca mais os ver.
 
-        It comes with material design and dark theme by default, provides great user experience for easy usage. The lack of internet access gives you more privacy, security and stability than other apps.
+        A interface é em material design e tema escuro por definição, mas pode alterar os temas a seu gosto. Não requer o acesso a Internet o que lhe confere mais privacidade, segurança e estabilidade.
 
         Não contém anúncios nem permissões desnecessárias. Disponibiliza um tema escuro e é totalmente \'open source\'.
 
-        <b>Check out the full suite of Simple Tools here:</b>
+        <b>Consulte o conjunto completo das aplicações Simple Tools:</b>
         https://www.simplemobiletools.com
 
         <b>Facebook:</b>
