--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -20,7 +20,7 @@
 
         По умолчанию он имеет материальный дизайн и темную тему, что обеспечивает хороший  пользовательский опыт и простоту использования. Отсутствие доступа в интернет дает вам больше конфиденциальности, безопасности и стабильности, чем другие приложения.
 
-        Это приложение не будет показывать рекламу или запрашивать ненужные разрешения. У него полностью открытый исходный код и есть тёмная тема оформления.
+        Это приложение не будет показывать рекламу или запрашивать ненужные разрешения. У него полностью открытый исходный код и есть настраиваемые цвета оформления.
 
         <b>Ознакомьтесь с полным набором инструментов серии Simple здесь:</b>
         https://www.simplemobiletools.com
