--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,7 +11,7 @@
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Простое приложение для быстрого &amp; легкого управления иконками запуска приложений</string>
     <string name="app_long_description">
-        Это не настоящий лаунчер, а просто обертка над значками ваших любимых приложений для быстрого запуска. Вы можете легко добавить для любого приложения, так что вам больше не придется пролистывать бесполезные приложения, чтобы найти то, что вам нужно. Вы также можете переименовать лаунчеры по своему усмотрению. 
+        Это не настоящий лаунчер, а просто обертка над значками ваших любимых приложений для быстрого запуска. Вы можете легко добавить лаунчер для любого приложения, так что вам больше не придется пролистывать бесполезные приложения, чтобы найти то, что вам нужно. Вы также можете переименовать лаунчеры по своему усмотрению. 
 
         Есть возможность закрыть само приложение при запуске другого для удобства навигации.
 
