--- a/app/src/main/res/values-az/strings.xml
+++ b/app/src/main/res/values-az/strings.xml
@@ -4,6 +4,7 @@
     <string name="enter_launcher_name">Başladıcı adı daxil edin</string>
     <string name="remove_explanation">Bu proses yalnız tətbiq ikonunu siyahıdan siləcək, tətbiqin özü silinməyəcək.</string>
     <string name="close_app">Close this app at launching a different one</string>
+    <string name="toggle_app_name">Toggle app name visibility</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
