--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -5,6 +5,7 @@
     <string name="enter_launcher_name">Introduïu un nom de llançador</string>
     <string name="remove_explanation">Això només eliminarà la icona del llançador d\'aquesta quadrícula, no desinstal·larà l\'aplicació real.</string>
     <string name="close_app">Tanqueu aquesta aplicació en llançar-ne una de diferent</string>
+    <string name="toggle_app_name">Toggle app name visibility</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Llançador d\'aplicacions simple: inicieu aplicacions fàcilment i ràpidament</string>
