--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -5,6 +5,7 @@
     <string name="enter_launcher_name">Kirjoita sovelluskäynnistimen nimi</string>
     <string name="remove_explanation">Tämä poistaa vain käynnistyskuvakkeen tästä ruudukosta, ei poista varsinaisen sovelluksen asennusta.</string>
     <string name="close_app">Sulje tämä sovellus, kun toinen käynnistetään</string>
+    <string name="toggle_app_name">Toggle app name visibility</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Simple App Launcher - Nopea &amp; helppo käynnistin</string>
