--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -4,6 +4,7 @@
     <string name="enter_launcher_name">Por favor insira un nome para o iniciador</string>
     <string name="remove_explanation">Esta acción elimina a icona da grella pero non desinstala o aplicativo.</string>
     <string name="close_app">Pechar este aplicativo despois de abrir outra</string>
+    <string name="toggle_app_name">Toggle app name visibility</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
