--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -5,6 +5,7 @@
     <string name="enter_launcher_name">Unesite naziv pokretača</string>
     <string name="remove_explanation">To će ukloniti ikonu pokretača samo iz mreže, ali neće deinstalirati aplikaciju.</string>
     <string name="close_app">Zatvorite ovu aplikaciju pri pokretanju druge</string>
+    <string name="toggle_app_name">Toggle app name visibility</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Jednostavan pokretač aplikacija – Pokreni aplikacije jednostavno i brzo</string>
