--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -5,6 +5,7 @@
     <string name="enter_launcher_name">Inserire il nome di un lanciatore</string>
     <string name="remove_explanation">Questo rimuoverà solamente l\'icona del lanciatore dalla griglia, non disintallerà l\'applicazione.</string>
     <string name="close_app">Chiudi l\'applicazione quando se ne avvia un\'altra</string>
+    <string name="toggle_app_name">Toggle app name visibility</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Simple App Launcher — Lancia le app facilmente e rapidamente</string>
