--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -5,6 +5,7 @@
     <string name="enter_launcher_name">ランチャーの名前を入力してください</string>
     <string name="remove_explanation">この操作は実際のアプリをアンインストールするのではなく、一覧からアプリのアイコンを削除するだけです。</string>
     <string name="close_app">別のアプリを起動するときにこのアプリを閉じる</string>
+    <string name="toggle_app_name">Toggle app name visibility</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">シンプルアプリランチャー - アプリを簡単かつ素早く起動する</string>
