--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -5,6 +5,7 @@
     <string name="enter_launcher_name">Įveskite paleidyklės pavadinimą</string>
     <string name="remove_explanation">Tai tik pašalins paleidyklės piktogramą iš šio tinklelio, bet nepašalins pačios programėlės iš telefono.</string>
     <string name="close_app">Paleidus kitą programėlę, užverti šią</string>
+    <string name="toggle_app_name">Toggle app name visibility</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Paprasta programėlių paleidyklė – patogi ir greita</string>
