--- a/app/src/main/res/values-nb-rNO/strings.xml
+++ b/app/src/main/res/values-nb-rNO/strings.xml
@@ -5,6 +5,7 @@
     <string name="enter_launcher_name">Skriv inn et oppstarternavn</string>
     <string name="remove_explanation">Dette vil kun fjerne oppstarteren fra rutenettet, ikke avinstallere det faktiske programmet.</string>
     <string name="close_app">Lukk dette programmet når et nytt startes</string>
+    <string name="toggle_app_name">Toggle app name visibility</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Enkel programoppstarter – start programmer enkelt og raskt</string>
