--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,6 +5,7 @@
     <string name="enter_launcher_name">Введите название лаунчера</string>
     <string name="remove_explanation">Будет удалён только значок лаунчера рабочего стола, но не само приложение.</string>
     <string name="close_app">Закрыть это приложение при запуске другого</string>
+    <string name="toggle_app_name">Toggle app name visibility</string>
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Simple App Launcher - запускайте приложения легко и быстро</string>
